slurm-246247.out
Traceback (most recent call last):
  File "eval.py", line 4, in <module>
    from video_dataset import VideoDataset
  File "/u/guiroysi/Action_Recognition/RecognizingViolentActions/video_dataset.py", line 30
    resize_frames=1.0):
                ^
SyntaxError: invalid syntax

======== GPU REPORT ========

==============NVSMI LOG==============

Timestamp                           : Fri Sep 14 16:13:06 2018
Driver Version                      : 390.25

Attached GPUs                       : 2
GPU 00000000:05:00.0
    Accounting Mode                 : Enabled
    Accounting Mode Buffer Size     : 1920
    Accounted Processes
        Process ID                  : 19762
            GPU Utilization         : 0 %
            Memory Utilization      : 8 %
            Max memory usage        : 156 MiB
            Time                    : 0 ms
            Is Running              : 1
        Process ID                  : 388
            GPU Utilization         : 0 %
            Memory Utilization      : 8 %
            Max memory usage        : 0 MiB
            Time                    : 0 ms
            Is Running              : 1

GPU 00000000:06:00.0
    Accounting Mode                 : Enabled
    Accounting Mode Buffer Size     : 1920
    Accounted Processes
        Process ID                  : 19762
            GPU Utilization         : 36 %
            Memory Utilization      : 16 %
            Max memory usage        : 0 MiB
            Time                    : 0 ms
            Is Running              : 1
        Process ID                  : 388
            GPU Utilization         : 36 %
            Memory Utilization      : 16 %
            Max memory usage        : 0 MiB
            Time                    : 0 ms
            Is Running              : 1

Fri Sep 14 16:13:06 2018       
+-----------------------------------------------------------------------------+
| NVIDIA-SMI 390.25                 Driver Version: 390.25                    |
|-------------------------------+----------------------+----------------------+
| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
|===============================+======================+======================|
|   0  GeForce GTX 1050    Off  | 00000000:05:00.0  On |                  N/A |
| 32%   54C    P8    N/A /  75W |     39MiB /  1999MiB |      0%      Default |
+-------------------------------+----------------------+----------------------+
|   1  TITAN X (Pascal)    Off  | 00000000:06:00.0 Off |                  N/A |
| 83%   79C    P8    27W / 250W |      2MiB / 12196MiB |      0%      Default |
+-------------------------------+----------------------+----------------------+
                                                                               
+-----------------------------------------------------------------------------+
| Processes:                                                       GPU Memory |
|  GPU       PID   Type   Process name                             Usage      |
|=============================================================================|
|    0     19762      G   /usr/bin/X                                    37MiB |
+-----------------------------------------------------------------------------+
